# delft

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  Readme.md  citationClassifier.py  classifiers.txt  dataseerClassifier.py  embedding-registry.json  grobidTagger.py  insultTagger.py  migrate_models.py  mkdocs.yml  model_weights.pt  nerTagger.py  out  pyproject.toml  pytest.ini  requirements-cuda.txt  requirements-gpu.txt  requirements.cpu.txt  requirements.dev.txt  requirements.gpu.txt  requirements.macos.txt  requirements.test.txt  requirements.txt  requirements.txt.dev  setup.py  softwareClassifier.py  textClassifier.py  toxicCommentClassifier.py  toxixCommentClassifier.py  train_all_models_bert.sh
.github/workflows/: ci-build-unstable.yml  ci-release.yml  codeql-analysis.yml
data/: db
data/test/: bar.txt  test.ner.en.txt  test.ner.fr.txt
delft/: __init__.py  citationClassifier.py  dataseerClassifier.py  grobidTagger.py  insultTagger.py  ner.py  resources-registry.json  toxicCommentClassifier.py
delft/applications/: citationClassifier.py  dataseerClassifier.py  datasetTagger.py  grobidTagger.py  insultTagger.py  licenseClassifier.py  nerTagger.py  onnx_export.py  sampling.py  softwareClassifier.py  softwareContextClassifier.py  textClassifier.py  toxicCommentClassifier.py
delft/sequenceLabelling/: __init__.py  config.py  data_generator.py  data_loader.py  data_loader_pytorch.py  evaluation.py  models.py  models_pytorch.py  models_tf.py  preprocess.py  reader.py  tagger.py  tagger_tf.py  trainer.py  trainer_pytorch.py  trainer_tf.py  wrapper.py  wrapper_pytorch.py  wrapper_tf.py
delft/textClassification/: __init__.py  config.py  data_generator.py  data_generator_tf.py  data_loader.py  models.py  models_pytorch.py  models_tf.py  preprocess.py  reader.py  trainer.py  wrapper.py  wrapper_tf.py
delft/utilities/: Attention.py  Embeddings.py  Readme.md  Tokenizer.py  Transformer.py  Utilities.py  attention_pytorch.py  bert_layer.py  convert_lmdb_embeddings.py  convert_model.py  crf_layer.py  crf_pytorch.py  crf_wrapper_default.py  crf_wrapper_for_bert.py  cuda_setup.py  dataloader_utils.py  distributed.py  layers.py  misc.py  multiprocessing.py  numpy.py  preprocess.py  transformer.py  truecase_conll2003.py
doc/: Install-DeLFT.md  Introduction.md  License.md  References.md  classifiers.md  context_classification_software.0.3.1.txt  copyrights_licenses_eval.txt  dataseer-scores-02-2020.txt  dataseer-scores-03-2020-reuse-model.txt  dataseer-scores-11-2020.txt  dataseer-scores.txt  datasets_scores_0.3.1.txt  delft-scores-2018.txt  delft-scores.txt  distributed_training.md  embeddings.md  features_header_eval_summary.md  grobid.md  index.md  model_transformers_embeddings_architectures.md  ner-datasets.md  ner.md  onnx_export.md  requirements.txt  scores-softwares.txt  sequence_labeling.0.3.0.txt  sequence_labeling.md  sequence_labeling_grobid.0.3.0.txt  sequence_labeling_grobid_funding.20230805.txt  text_classification.md  wandb.md
exported_models/affiliation-address-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx  vocab.json
exported_models/citation-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx  vocab.json
exported_models/copyright-gru.onnx/: classifier.onnx  config.json  labels.json
exported_models/date-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx  vocab.json
exported_models/funding-acknowledgement-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx  vocab.json
exported_models/header-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx
exported_models/header-BidLSTM_ChainCRF_FEATURES.onnx/: crf_params.json  encoder.onnx  vocab.json
exported_models/header-coi-ac-BidLSTM_CRF_FEATURES.onnx/: crf_params.json  encoder.onnx  vocab.json
exported_models/header-coi-ac-BidLSTM_ChainCRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx
exported_models/license-gru.onnx/: classifier.onnx  config.json  labels.json
exported_models/reference-segmenter-BidLSTM_CRF_FEATURES.onnx/: config.json  crf_params.json  encoder.onnx  vocab.json
java/delft-onnx/: build.gradle  gradle.properties  gradlew  settings.gradle
scripts/: train_all_models.sh  train_all_models_bert.sh  train_distributed.sh  train_distributed_all_models.sh  train_distributed_all_models_incremental.sh  train_distributed_citation.sh  train_distributed_license_classifier.sh  train_eval_all_models.sh  train_eval_all_models_bert.sh  train_eval_distributed_all_models.sh  train_eval_header_model.sh  update_wandb_short_model_name.py
sequenceLabelling/: __init__.py  config.py  data_generator.py  evaluation.py  evaluator.py  metrics.py  models.py  preprocess.py  reader.py  tagger.py  tokenizer.py  trainer.py  wrapper.py
tests/: conftest.py  test_utils.py
tests/data/: preprocessor.json
tests/sequenceLabelling/: conftest.py  preprocess_test.py
tests/sequence_labelling/: conftest.py  preprocess_test.py  reader_test.py  tagger_test.py  tokenizer_test.py
tests/text_classification/: __init__.py  test_models.py  test_preprocess.py
tests/utilities/: __init__.py  test_cuda_setup.py  test_embeddings_serialization.py  test_preprocess.py
tests/utils/: convert_model_test.py  (+3 more)
textClassification/: __init__.py  config.py  data_generator.py  models.py  preprocess.py  reader.py  wrapper.py
unicodeOCR/: README.md  batchtest.py  quicktest.py  train_ocr.py  traindatagen.py  uocr.py
utilities/: Attention.py  Embeddings.py  Readme.md  Tokenizer.py  Utilities.py
(+490 files in other folders)
