[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.3.4"
commit = "true"
tag = "true"
tag_name = "v{new_version}"

[project]
name = "delft"
description = "a Deep Learning Framework for Text"
readme = "Readme.md"
authors = [
    { name = "Patrice Lopez", email = "patrice.lopez@science-miner.com" }
]
maintainers = [
    { name = "Patrice Lopez", email = "patrice.lopez@science-miner.com" },
    { name = "Luca Foppiano", email = "lucanoro@duck.com" }
]
requires-python = ">=3.10"

dynamic = ['version', "dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
classifiers = {file = ["classifiers.txt"]}

[project.urls]
Homepage = "https://github.com/kermitt2/delft"
Repository = "https://github.com/kermitt2/delft"
Changelog = "https://github.com/kermitt2/delft"

[tool.setuptools.packages.find]
exclude = ["test", "*.test", "*.test.*"]